--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.26.3",
     "gulp": "^4.0.2",
-    "jquery": "^3.5.1",
-    "slick": "^1.12.2",
-    "slick-carousel": "^1.8.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^4.0.0",
+    "gulp-cli": "^2.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.1",
-    "browser-sync": "^2.26.3"
+    "jquery": "^3.5.1",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1"
   }
 }
