--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^4.1.0",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.0.0",
@@ -18,6 +19,7 @@
     "gulp-uglify": "^3.0.1",
     "jquery": "^3.5.1",
     "slick": "^1.12.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "wow.js": "^1.2.2"
   }
 }
